# GPT-From-Scratch

./: .gitignore  Attention-mechanism-fixed.ipynb  Attention-mechanism.ipynb  Attention.py  LICENSE  LLM-Architecture.ipynb  README.md  README_REFERENCE_MODEL_NAMES.txt  Tokenizer_my.ipynb  WholeGPTBlock.ipynb  pyproject.toml
Data/: test.csv  train.csv
Notebooks/: 03_Architecture.ipynb  WholeGPTBlock.ipynb
Scripts/: Instruction_FineTune_dataset.py  __init__.py
