[project]
name = "gpt-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "tensorflow>=2.20.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
